# game_ai

./: .gitignore  pyproject.toml  run.py
assets/layouts/: big.lay  corners.lay  medium.lay  small.lay
layouts/: base_maze.lay
src/: agent.py  const.py  layout.py  utils.py
src/consts/: direction.py  game.py  graphics.py  types.py
src/data_analysis/: score_prediction.ipynb  statistics.hy
src/graphics/: display.py  ui.py
src/minimax/: minimax.hy
src/pacman/: agent.py  game.py  ghost_agents.py  keyboard_agents.py  rules.py  search.py  search_solvers.py
src/pacman/multiagent/: agents.py  states.py  utilities.py
src/pacman/rl/: __init__.py  agents.py  config.py
src/pacman/rl/dqn/: model.py  network.py
src/pacman/rl/dqn/configs/: __init__.py  dqn.py  model.py
src/pacman/rl/dqn/trained/: checkpoint.tar.pth
src/pacman/rl/dqn/utils/: experience.py  replay_memory.py
src/pacman/rl/dqn/utils/layer_params/: __init__.py  conv.py  linear.py
src/pacman/search/: agents.py  cost_fns.py  heuristics.py  problems.py  search.py  search_agents.py  search_solvers.py  solvers.py  states.py
src/utils/: data_structures.py  general.py  graph.py  grid.py  layout.py  logger.py  parser.py  search.py  timer.py  vector.py
