[tool.poetry]
name = "game_ai"
version = "0.1.0"
description = "Pacman game with AI agents"
authors = ["ShkarupaDC <dimon.shkarupa@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
