[tool.poetry]
name = "game_ai"
version = "0.1.0"
description = "Pacman game with AI agents"
authors = ["ShkarupaDC <dimon.shkarupa@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.2"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.8b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
