[tool.poetry]
name = "game_ai"
version = "0.1.0"
description = "Pacman game with AI agents"
authors = ["ShkarupaDC <dimon.shkarupa@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.2"
scipy = "^1.7.1"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
ipykernel = "^6.4.2"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
hy = "^0.20.0"
torch-summary = "^1.4.5"

[tool.poetry.dev-dependencies]
black = {version = "^21.8b0", allow-prereleases = true}
nb-black = "^1.0.7"
poethepoet = "^0.11.0"

[tool.poe.tasks]
get-torch = "python -m pip install torch==1.10.0+cu113 torchvision==0.11.1+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
